# rthermo

./: .gitignore  .gitmodules  README.md
device/: Makefile  config.h
device/src/: main.c
include/: rthermo.h
linux/: Makefile.am  README  README.md  autogen.sh  configure.ac
linux/configs/: Makefile.am  default.cfg  rpi3.cfg  tx1.cfg
linux/include/: Makefile.am  rthermo.h
linux/src/: Makefile.am  config_file.c  config_file.h  controller.c  controller.h  db.c  db.h  httpd.c  httpd.h  main.c  nrf24.c  nrf24.h
linux/src/sys/: gpio.c  gpio.h  spidev.c  spidev.h
